--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>cn.edu.scnu</groupId>
-    <artifactId>spring-boot-flower</artifactId>
+    <artifactId>ic_film</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>spring-boot-flower</name>
-    <description>spring-boot-flower</description>
+    <name>ic_film</name>
+    <description>ic_film</description>
     <properties>
         <java.version>1.8</java.version>
     </properties>
