--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,8 @@ spring.thymeleaf.mode=HTML
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 mybatis-plus.configuration.logImpl=org.apache.ibatis.logging.stdout.StdOutImpl
-mybatis-plus.configuration.mapUnderscoreToCamelCase=true 
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+mybatis-plus.configuration.mapUnderscoreToCamelCase=true
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql:///flower1?useUnicode=true&characterEncoding=utf8&autoReconnect=true&allowMultiQueries=true
 spring.datasource.username=root
 spring.datasource.password=123456
